<resources>
    <string name="app_name">YuvAgri</string>
    <string name="sign_up">Sign Up</string>
    <string name="yuvagri">YuvAgri</string>
    <string name="crop_guidance_app">Crop Guidance App</string>
    <string name="login">Login</string>
    <string name="welcome_to">Welcome To</string>
    <string name="login_here">Login Here</string>
    <string name="email_phone_no">Email/Phone No.</string>
    <string name="password">Password</string>
    <string name="new_user">New User?</string>
    <string name="sign_up1">Sign Up</string>
    <string name="title_activity_soil">SoilActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="full_name">Full Name</string>
    <string name="already_signed_up">Already Signed Up?</string>
    <string name="sign_up_here">Sign Up Here</string>
    <string name="red_soil">Red Soil</string>
    <string name="loamy_soil">Loamy Soil</string>
    <string name="sandy_soil">Sandy Soil</string>
    <string name="username">Username</string>
    <string name="re_password">Re-Password</string>
    <string name="clay_soil">Clay soil</string>
    <string name="black_soil">Black Soil</string>
    <string name="paddy1">Paddy farmers used to get their fields ready before the rainy season. The weeds are cleared and the field is ploughed by buffaloes or tractors to a depth of few inches. Manures and fertilizers are added to the soil. The whole surface then remained covered with water of about 2.5 cm. The field is then ready for receiving seedlings from the nursery.</string>
    <string name="paddy1h">Preparation of Field:</string>
    <string name="paddy2">Generally paddy seedlings are first prepared in nursery and then transplanting is done in the field after about 40 days. Although in some areas of India and Sri Lanka seeds have been sown directly in the field and the seedlings sprout when the rain comes. But yield of paddy from transplanting is greater than the direct sowing. The transplanted paddy also grows faster because of regular spacing and matures within a shorter period.</string>
    <string name="paddy2h">Transplantation:</string>
    <string name="paddy3">Paddy fields also require regular maintenance, such as occasional weeding and thinning out the more crowded patches, level of water is to be maintained according to the growth and the fields are drained dry before the crop is harvested.</string>
    <string name="paddy3h">Field Maintenance:</string>
    <string name="paddy4">The traditional harvesting system is either through a curved knife or a sharp-edged knife. It is very labour-intensive. Harvesting is done in the dry season, when the weather is sunny. Mechanical combines which cut and thresh are used in Japan.</string>
    <string name="paddy4h">Harvesting:</string>
    <string name="paddy5">After the paddy stalks have been gathered and dried for a brief spell, their threshing is usually done. By beating the sheaves against the bars, the grains are separated from the stalks. Now threshing machines have also been developed.</string>
    <string name="paddy5h">Threshing, Winnowing and Milling:</string>
    <string name="winnowing_is_a_process_of_removing_the_unwanted_particles_from_the_paddy_grains_the_simplest_way_is_by_pouring_the_paddy_down_from_a_height_on_a_windy_day_to_a_large_square_mat_on_open_ground_the_grains_fall_to_the_mat_while_lighter_chaff_blows_out_sometimes_hand_winnowing_machines_are_also_used">Winnowing is a process of removing the unwanted particles from the paddy grains. The simplest way is by pouring the paddy down from a height on a windy day to a large square mat on open ground. The grains fall to the mat while lighter chaff blows out. Sometimes hand-winnowing machines are also used.</string>
    <string name="milling_means_removal_of_the_yellowish_husks_from_paddy_so_that_white_or_polished_rice_is_obtained_in_a_rice_mill_the_paddy_is_made_to_pass_between_varying_sets_of_huller_or_rollers_till_it_is_milled_or_polished">Milling means removal of the yellowish husks from paddy so that white or polished rice is obtained. In a rice mill the paddy is made to pass between varying sets of huller or rollers till it is milled or polished.</string>
    <string name="although_there_are_several_varieties_of_rice_but_on_the_basis_of_their_location_two_varieties_have_been_identified_these_are_i_upland_rice_which_is_grown_on_upland_areas_and_ii_lowland_rice_which_grows_in_low_lying_and_marshy_areas"><![CDATA[Although, there are several varieties of rice, but on the basis of their location two varieties have been identified. These are: (i) upland rice, which is grown on upland areas; and (ii) lowland rice, which grows in low lying and marshy areas.]]></string>
    <string name="cotton">COTTON CROP</string>
    <string name="nursery">The seeds are generally sown in a seed bed and 4-6 week old seedlings are transplanting to the field. Cabbage seeds are sown on nursery beds to raise seedlings for transplanting in the field. Raised beds of size 3 x 0.6 m and 10-15 cm in height are prepared. About 70cm distance is kept between two beds to carry out intercultural operations such as watering, weeding, etc. The surface of beds should be 2 smooth and well levelled. Well-decomposed FYM @ 2-3 kg/m is added at the time of bed preparation. Raised beds are necessary to avoid problem of water logging in heavy soils. To avoid mortality of seedlings due to damping off, drenching of the beds with Bavistin (15-20g/10 litres of water) is effective.</string>
    <string name="sugarcane">Sugarcane Crop</string>
    <string name="groundnut">GROUNDNUT</string>
    <string name="jowar">JOWAR</string>
    <string name="potato">POTATO</string>
    <string name="greengram">GREEN GRAM</string>
    <string name="paddy">paddy</string>
    <string name="wheat">WHEAT CROP</string>
    <string name="cabbage">CABBAGE</string>
    <string name="email">Email</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="paddy_crops">Paddy</string>
    <string name="potato1">The Potato, a native of South America occupies a largest area any single vegetable in the world. It has a special value as food. The consumption of potato per head is very low in India as compared to that of Western Countries. Potato belongs to family Solanaceae and botanical name is Solanum tuberosum.</string>
    <string name="potato2">Potato can be grown well in fertile and well-drained soil. Potato grows well in soil having pH 4.8-5.4. Heavy soil should be avoided. The short day conditions are highly favourable for economic yield of potato crops. To secure good for potato a day length of 12-13 hours is needed and night temperature 200 C increase tuberization.</string>
    <string name="potato3">The potato belongs to family Solanaceae. It is a harbaceos annual and propagated by tubers, the thick underground stems which are called stolons. The stolon are slender, arising from buds, length and diameter varies with varieties. Eyes on the potato are buds and one or more develops into stem and leaves. Stem may be green, purple or light violet. Leaves are compound with opposite leaflets. Stems and leaves prostrate or erect. Height of plant one to two feet depending on variety. Roots are shallow and superficial, extend upto two feet. Flowers are about an inch in diameter, corolla white to purple or violet. Fruit is a berry but commonly not developed, spherical, half to one inch in diameter, purple or black. Seeds are about the size of mustard, hetrozygous, not use for propagation except for breeding purpose. The size, shape, colour of skin of tubers varies with variety. The flush colour may be white, light yellow, pink or light blue.</string>
    <string name="potato3h">Planting Habits:</string>
    <string name="potato4">F.Y.M.  250-400 g/hectare\n120-160 kg/hectare N\n80-120 kg/hectare P\n80-120 kg/hectare K\nTo be incorporated into the soil 3 to 4 weeks before planting half dose of nitrogen full dose of P2O5 and K2O as basal dressing at planting and remaining nitrogen dose is given at the time of earthing up.</string>
    <string name="potato4h">Application of Manures and Fertilizer:</string>
    <string name="potato5">Potato needs irrigation at frequent intervals, depending upon the soil and climatic conditions. Usually 6 irrigation is sufficient. Pre-sowing irrigation followed by 5-6 light irrigations.</string>
    <string name="potato5h">Irrigation:</string>
    <string name="potato6">Cut worms – Spray Dursban 20 EC or apply Phorate in soil.\nCaterpillar – Spray Thiodan or BHC (10%)\nAphid -- Spray Rogor or Nuvacron or Malathion\nJassids -- Spray Metasystox (0.1%)\nDiseases:Nematodes -- Fumigate soil with D-D\nEarly Blight – Spray Dithane M-45 (0.2%)\nLate blight -- Spray Dithane M-45 or Dithane Z-78 or Difolatan or Zineb.\nScab --Disinfect tubers with Agallol-6 or Mercuric fungicides.\nVirus disease – Use certified seeds. Spray Metasystox (0.1%) or apply Timet or Furadon in furrow before planting.</string>
    <string name="potato6h">Plant Protection Pests:</string>
    <string name="potato7">Potato is harvested from the time it is sufficient size until the vines are fully ripe. The average yield varies from 20 to 30 tonnes per hectare. The best method storing potato is in cold stores at 2.20 C to 3.30 C and at 75 to 80% relative humidity.</string>
    <string name="potato7h">Yield:</string>
    <string name="step_by_step_guidance_for_crop_cultivation">Step By Step Guidance For Crop Cultivation</string>
    <string name="potatoyt">Youtube video <a href="https://www.youtube.com/watch?v=Rs6cV4BhGVM">youtube.com</a></string>
    <string name="potatoweb">Website <a href="https://www.apnikheti.com/en/pn/agriculture/horticulture/vegetable-crops/potato">website.com</a></string>
    <string name="paddyyt">Youtube videos</string>
    <string name="paddyyt1">1.<a href="https://youtu.be/Zid9-aFBSlU">LandPreparation</a></string>
    <string name="paddyyt2">2.<a href="https://youtu.be/R2rqGqLCDNg">SowingSeeds</a></string>
    <string name="paddyyt3">3.<a href="https://youtu.be/P2DV2ewXyS8">Harvesting</a></string>
    <string name="paddyyt4">4.<a href="https://youtu.be/BqMv-p2QntM">Threshing1</a></string>
    <string name="paddyyt5">5.<a href="https://youtu.be/A1WCid_Zx8Y">Threshing2</a></string>
    <string name="paddyweb">Website <a href="https://www.farmingindia.in/paddy-cultivation/">website.com</a></string>
    <string name="reference">Reference</string>
</resources>